src/test/ui/consts/const-mut-refs/mut_ref_in_final.stderr
error[E0764]: mutable references are not allowed in the final value of constants
  --> $DIR/mut_ref_in_final.rs:10:21
   |
LL | const B: *mut i32 = &mut 4;
   |                     ^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/mut_ref_in_final.rs:16:40
   |
LL | const B3: Option<&mut i32> = Some(&mut 42);
   |                              ----------^^-
   |                              |         | |
   |                              |         | temporary value is freed at the end of this statement
   |                              |         creates a temporary which is freed while still in use
   |                              using this value as a constant requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/mut_ref_in_final.rs:19:42
   |
LL | const B4: Option<&mut i32> = helper(&mut 42);
   |                              ------------^^-
   |                              |           | |
   |                              |           | temporary value is freed at the end of this statement
   |                              |           creates a temporary which is freed while still in use
   |                              using this value as a constant requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/mut_ref_in_final.rs:34:65
   |
LL | const FOO: NotAMutex<&mut i32> = NotAMutex(UnsafeCell::new(&mut 42));
   |                                  -------------------------------^^--
   |                                  |                              |  |
   |                                  |                              |  temporary value is freed at the end of this statement
   |                                  |                              creates a temporary which is freed while still in use
   |                                  using this value as a constant requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/mut_ref_in_final.rs:37:67
   |
LL | static FOO2: NotAMutex<&mut i32> = NotAMutex(UnsafeCell::new(&mut 42));
   |                                    -------------------------------^^--
   |                                    |                              |  |
   |                                    |                              |  temporary value is freed at the end of this statement
   |                                    |                              creates a temporary which is freed while still in use
   |                                    using this value as a static requires that borrow lasts for `'static`

error[E0716]: temporary value dropped while borrowed
  --> $DIR/mut_ref_in_final.rs:40:71
   |
LL | static mut FOO3: NotAMutex<&mut i32> = NotAMutex(UnsafeCell::new(&mut 42));
   |                                        -------------------------------^^--
   |                                        |                              |  |
   |                                        |                              |  temporary value is freed at the end of this statement
   |                                        |                              creates a temporary which is freed while still in use
   |                                        using this value as a static requires that borrow lasts for `'static`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0716, E0764.
For more information about an error, try `rustc --explain E0716`.
